--- a/index.html
+++ b/index.html
@@ -393,8 +393,8 @@
             <h1 class="foot-mid-h1">Quick Links</h1>
             <ul>
               <li><a href="#top">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#services">Services</a></li>
+              <li><a href="#About">About</a></li>
+              <li><a href="#Features">Features</a></li>
               <li><a href="#contact">Contact</a></li>
 
             </ul>
