--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <a href="#top"><img src="Assest/logo.jpeg" class="logo" title="Kushal AIDE"> </a>
     <a href="#top" class="text">Kushal AIDE</a>
     <ul>
-      <li class="hide"><a href="#" class="active">Home</a></li>
+      <li class="hide"><a href="#Home">Home</a></li>
       <li class="hide"><a href="#About">About</a></li>
       <li class="hide"><a href="#Features">Features</a></li>
       <li class="hide"><a href="#pricing">Pricing</a></li>
